--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0'
     implementation files('libs/jsoup-1.13.1.jar')
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 }
