--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
 
     implementation files('libs/jsoup-1.13.1.jar')
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
 }
